--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">My Application</string>
+
+    <!-- Google Maps API Key -->
+    <string name="google_maps_key">AIzaSyCy1AgaXWLlQNgbFmfMNavwuMFwFharJHY</string>
 </resources>
